deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ark-app
spec:
  selector:
    app: ark-narrator
    component: app
  ports:
    - port: 80
      targetPort: 8000
